--- a/style.css
+++ b/style.css
@@ -73,13 +73,15 @@ button {
     width: 100%;
     height: 45px;
     background-color: #c9ada7;
-    border: 2px solid #c9ada7;
+    border: 2px solid #a17970;
     border-radius: 8px;
     color: #fff;
     font-size: 20px;
     cursor: pointer;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     transition: all 0.1s ease;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
+
 }
 
 button:hover {
@@ -150,6 +152,8 @@ form {
     text-align: center;
     color: white;
     font-size: 18px;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
+
 }
 
 form {
